update document name & font

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <script
@@ -28,9 +28,9 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <title>Document</title>
+    <title>Valentin Morice - Web Development</title>
   </head>
-  <body class="bg-gray-100 text-lg text-gray-800 px-4 sm:px-12">
+  <body class="bg-gray-100 text-lg text-gray-800 px-4 sm:px-12 font-ubuntu">
     <nav class="py-8 max-w-[80rem] mx-auto flex items-center justify-between">
       <p class="bg-gray-300 py-2 px-4 text-white rounded-md italic">
         morice.io
