set method on form

--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
         ></ion-icon>
       </div>
       <form
+        method="post"
         netlify
         id="contactForm"
         class="flex flex-col gap-6 mx-auto max-w-[50rem] mb-40"
