add form validation

--- a/index.html
+++ b/index.html
@@ -335,25 +335,29 @@
         </p>
         <div class="flex flex-col sm:flex-row justify-between gap-6">
           <input
+            required="required"
             type="text"
             class="bg-white py-2 px-3 rounded-xl sm:w-1/2 shadow-sm"
             placeholder="Name"
             name="name"
           />
           <input
-            type="text"
+            required="required"
+            type="email"
             class="bg-white py-2 px-3 rounded-xl sm:w-1/2 shadow-sm"
             placeholder="Email"
             name="email"
           />
         </div>
         <input
+          required="required"
           type="text"
           class="bg-white py-2 px-3 rounded-xl shadow-sm"
           placeholder="Subject"
           name="subject"
         />
         <textarea
+          required="required"
           name="message"
           class="py-2 px-3 rounded-xl bg-white shadow-sm"
           cols="30"
